# gregarious

./: .gitmessage  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
gregarious/: __init__.py
scripts/: tasks.py
