[tool.poetry]
name = "gregarious"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.6.10"
rich = "^3.3.2"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = "^2.6.0"
pydocstyle = "^5.0.2"
bandit = "^1.6.2"
pylint = "^2.5.3"
pytest-cov = "^2.10.0"
radon = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
